--- a/trunk/Todo.txt
+++ b/trunk/Todo.txt
@@ -12,6 +12,4 @@ circuit maken met timing 32.768Hz/N
 IC researchen, might just make your life a lot easier
 
 
-uln2803 maaken 
-
-datasiet zoeken l78z05cv
+testen of dat met die ulns werekt
