+ added some todo things

--- a/Todo.txt
+++ b/Todo.txt
@@ -12,9 +12,9 @@ na de hijpas vilter kijken voor een voltasje vergelijker
 
 ets printer en ligt
 
-idialen ferkwensie foor zenden plc
+idealen frequentie voor zenden plc
 
 
+research doen naar X-10
 
-
-
+http://www.edcheung.com/automa/circuit.htm
