--- a/trunk/Todo.txt
+++ b/trunk/Todo.txt
@@ -10,10 +10,7 @@ codeblocks per categorie een andere kleur geven
 Make new kismet compiler
 
 //frontend bugs
-working area word niet geupdate als je een pijl op een input dragged
-je kan aleen outputs aan inputs maken, niet inputs aan outputs
-
-
+je kan dingen uit parallel scopes connected, dit is niet legal
 
 Bas
 ********************
