--- a/trunk/Code/MainStationFrontEnd/AddDevice.resx
+++ b/trunk/Code/MainStationFrontEnd/AddDevice.resx
@@ -124,8 +124,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACu
-        CQAAAk1TRnQBSQFMAgEBAgEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACc
+        CQAAAk1TRnQBSQFMAgEBAgEAARABAAEQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -155,18 +155,18 @@
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
         AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wYAAfIBkgLqAe0B8goA
         AfIBkgLqAe0B8ioAAUoBGgLDAZkBSgoAAUoBGgLDAZkBSikAAf8BSgFzAhwBcwFKCQAB/wFKAXMCHAFz
-        AUopAAH/AUoBGwLDAZkBSgkAAf8BSgEbAsMBmQFKKQAB/wH4AYsC9wEcAa4B9AgAAf8B+AGLAvcBHAGu
-        AfQnAAHyAYsBtQHwAfEB8AEJAbQBiwG8BgAB8gGLAe0EmQHsAYsBvCUAAf8BrgMHAf8B7gEHAe8BtQGL
-        Af8EAAH/Aa4B7wF5AXMB5QJRAXgB9wGLAf8kAAHtAbUBvAEHAf8BBwLuAgcBtAH4BAAB7QH3AXkBUQHl
-        BFEBeAHsAfgkAAGuAfMC7gH/Au4BBwHuAQcBCQGLBAABrgGZAXkBVwFeBVEBmQGLJAABZgH1Au4B/wG8
-        Au4BBwHuAfABZgH/AwABZgGgAlgBXgNYAlEBmQFmAf8jAAFmAf8B7gG8BP8BBwHuAfEBZgH/AwABZgGg
-        AlgEXgFXAVEBmQFmAf8jAAGuAfQEvALuAgcB8AGLBAABrgGgAXkFWAFXAXMBmQGLJAAB7wG1AfADvALu
-        AgcBtQH3BAAB7wH3AXkFWAFXAXkB7QH3JQABrgLwAbwD7gG8Ae4BrgYAAa4BCAJ5AlgCeQGZAa4mAAH0
-        Aa4BtQH0Af8B9QHzAbUBrgH0BgAB9AGuAfcDoAEaAfcBrgH0KAABBwGuAmYBrgHvCgABBwGuAmYBrgHv
-        JQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAfgBHwH4AR8EAAH4AR8B+AEf
-        BAAB8AEfAfABHwQAAfABHwHwAR8EAAHwAQ8B8AEPBAAB4AEHAeABBwQAAcABAwHAAQMEAAHAAQMBwAED
-        BAABwAEDAcABAwQAAcABAQHAAQEEAAHAAQEBwAEBBAABwAEDAcABAwQAAcABAwHAAQMEAAHgAQcB4AEH
-        BAAB4AEHAeABBwQAAfgBHwH4AR8EAAs=
+        AUopAAH/AUoBGwLDAZkBSgkAAf8BSgEbAsMBmQFKKQAB/wHsAYsC9wEcAa4B9AgAAf8B7AGLAvcBHAGu
+        AfQnAAHyAYsBtQHwAfEB8AEJAbQBiwG8BgAB8gGLAe0EmQHsAYsBvCUAAf8BrgMHAf8BvAEHAe8BtQGL
+        Af8EAAH/Aa4B7wF5AXMB5QJRAXgB9wGLAf8kAAHtAbUBvAEHAf8BBwK8AgcBtAHsBAAB7QH3AXkBUQHl
+        BFEBeALsJAABrgHzArwB/wK8AQcBvAEHAQkBiwQAAa4BmQF5AVcBXgVRAZkBiyQAAWYB/wK8Af8DvAEH
+        AbwB8AFmAf8DAAFmAaACWAFeA1gCUQGZAWYB/yMAAWYB/wK8BP8BBwG8AfEBZgH/AwABZgGgAlgEXgFX
+        AVEBmQFmAf8jAAGuAfQGvAIHAfABiwQAAa4BoAF5BVgBVwFzAZkBiyQAAe8BtQHwBbwCBwG1AfcEAAHv
+        AfcBeQVYAVcBeQHtAfclAAGuAvAGvAGuBgABrgEIAnkCWAJ5AZkBriYAAfQBrgG1AfQC/wHzAbUBrgH0
+        BgAB9AGuAfcDoAEaAfcBrgH0KAABBwGuAmYBrgHvCgABBwGuAmYBrgHvJQABQgFNAT4HAAE+AwABKAMA
+        AUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAfgBHwH4AR8EAAH4AR8B+AEfBAAB8AEfAfABHwQAAfABHwHw
+        AR8EAAHwAQ8B8AEPBAAB4AEHAeABBwQAAcABAwHAAQMEAAHAAQMBwAEDBAABwAEDAcABAwQAAcABAQHA
+        AQEEAAHAAQEBwAEBBAABwAEDAcABAwQAAcABAwHAAQMEAAHgAQcB4AEHBAAB4AEHAeABBwQAAfgBHwH4
+        AR8EAAs=
 </value>
   </data>
 </root>
