--- a/trunk/Todo.txt
+++ b/trunk/Todo.txt
@@ -1,16 +1,8 @@
 Roeny
 ********************
-//het grote plan!
-een protocol voor het PLC netwerk bedenken
-
-//WIP
-Add Kismet Editor to new Frontend
-codeblocks per categorie een andere kleur geven
-
-Make new kismet compiler
-
-//frontend bugs
-je kan dingen uit parallel scopes connected, dit is niet legal
+[DONE] een protocol voor het PLC netwerk bedenken
+fix localisation error, on some machine 1.3 becomes 1,3 which wil then be seen as 13
+add type ID to all devices so frond end can figure out what kind of device devices are
 
 Bas
 ********************
